--- a/config.yml
+++ b/config.yml
@@ -2,15 +2,27 @@
 # +------------------------------------------------------+ #
 # |                                                      | #
 # |              KOTH Plugin Configuration               | #
-# |                  Made By Benzimmer                   | #
 # |                                                      | #
 # +------------------------------------------------------+ #
+############################################################
+
+# Information:
+
+# Author: Benzimmer
+# Profile: http://tiny.cc/benzimmer
+# Discord Link: https://discord.gg/fuffySb
+# Resource Link: http://tiny.cc/kothplugin
+
+############################################################
+#                                                          #
+#                    Scoreboard Section                    #
+#                                                          #
 ############################################################
 
 SCOREBOARD:
   USE_SCOREBOARD: true
   UPDATE_TICKS: 20
-  SCOREBOARD_TITLE: '&a&lKing Of The Hull'
+  SCOREBOARD_TITLE: '&a&lKOTH'
   SCOREBOARD_LINES:
   - '&6&lRunning KOTH(s):'
   - '%koth%'
@@ -24,18 +36,24 @@ SCOREBOARD:
   - 'Z: %z%'
   - ' '
   - '&6&lControlling:'
-  - 'Pirate(s): %player%'
+  - 'Player(s): %player%'
   - 'Crew(s): %team%'
   DISABLE_IN_WORLD: # Any player in these worlds will not receive scoreboard updates
   - exampleworld
-  ONLY_IN_REGION: # If you only want to display the scoreboard in these WorldGuard regions
+  ONLY_IN_REGION: # If you only want to display the scoreboard in these KOTH regions
     ENABLED: false
     REGIONS:
-    - example2
+    - example
 
 FEATHERBOARD_TRIGGER: # Make sure KOTH scoreboard is disabled and that the scoreboard name is in the "scoreboards" folder of Featherboard
   ENABLED: true
   SCOREBOARD_NAME: koth
+  
+############################################################
+#                                                          #
+#                      Rewards Section                     #
+#                                                          #
+############################################################  
   
 REWARDS:
   USE_REWARDS: true
@@ -54,11 +72,26 @@ REWARDS:
     ITEM_DISPLAY_LORE:
     - '&7This is the default lore.'
     ITEM_AMOUNT: 1
-    GLOW: true
+    GLOW: false
+    
+############################################################
+#                                                          #
+#                      General Section                     #
+#                                                          #
+############################################################  
 
-DEFAULT_CAPTURE:
-  TIMER: 1 # Amount of seconds added per second
-  POINTS: 1 # Amount of points added per second
+# Use this feature to use a point system instead of a timer
+
+KOTH_POINTS_SYSTEM:
+  ENABLED: false
+  STORED_TYPE: 'PLAYER' # Put either 'PLAYER' or 'TEAM' here
+  MAX_POINTS: false # Set this to true to specify max points instead of max run time
+
+KNOCK_DELAY: 5 # This will prevent the chat from being spammed.
+
+ANNOUNCE_KOTH_ON_JOIN: true
+  
+RESET_MAXRUNTIME_ON_CAPTURE: false # Set this to true to reset the maxruntime every time a player starts capturing
 
 PLAYER_COOLDOWN: # Use this to allow players to start KOTH via command but have a cooldown once started
   USE_COOLDOWN: true
@@ -72,46 +105,62 @@ KOTH_TOP:
 KOTH_STARTER_ITEM:
   START_TIME: 300
   MINIMUM_PLAYERS: 2
-  NAME: '&aKing Of The Hull Start'
+  NAME: '&aKOTH Start'
   MATERIAL: EMERALD
   LORE:
-  - '&7> Right-click in zone to start the KOTH event.'
+  - '&7> Right-click to start the KOTH event.'
 
-KOTH_ADMIN_GUI:
-  NAME: '&aKing Of The Hull START GUI'
-  SIZE: 27
+VIEW_COMMAND_PER_PERMISSION: false
 
-KOTH_PLAYER_GUI:
-  NAME: '&aKOTH PLAYER GUI'
-  SIZE: 27
+CUSTOM_HELP_PAGE:
+  ENABLED: false
+  TITLE: '&aCustom KOTH Help Menu'
+  PAGES:
+    1: # List the page number here
+    - '&a/koth times &b- View the scheduled KOTHs.'
   
-DISABLE_BROADCASTS_IN_WORLDS: # Disable any KOTH related broadcasts in these worlds
-- example  
-
-BROADCAST_PERMISSION: # Enable this to have players require this permission to see messages
-  ENABLED: false # Permission is KOTH.MESSAGES
-
-KNOCK_DELAY: 5 # This will prevent the chat from being spammed.
+############################################################
+#                                                          #
+#                     Scheduler Section                    #
+#                                                          #
+############################################################
 
 # List of timezones can be found here https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 # Any spaces in a timezone should be used as an "_"
 
-CURRENT_TIMEZONE: America/Chicago
-
-VIEW_COMMAND_PER_PERMISSION: false
-
-ANNOUNCE_KOTH_ON_JOIN: true
-
-PERMISSION_FOR_CAPTURE: false
-
-ALLOW_NO_TEAM_CAPTURE: true # Set this to false to disable players without a team to capture
-
-ALLOW_FULL_TEAM_CAPTURE: false # Set this to true to allow a whole team to capture rather than a player
+CURRENT_TIMEZONE: Europe/London
+  
+MINIMUM_PLAYERS_FOR_SCHEDULE_START: -1 # Set to -1 for this to be disabled
 
 USE_NEW_TIMEFORMAT: false # If this is set to true all time formats will be hh,mm,ss.
 
-PAUSE_OTHER_TEAMS: false # Pause capture if another team is stood on the zone
+############################################################
+#                                                          #
+#                      Feature Section                     #
+#                                                          #
+############################################################  
 
+HOLOGRAM_EVENTS: # Use this feature to reload holograms to update with new cappers etc
+  NEW_CAPPER: false
+  
+BOSS_BAR: # You must be using 1.9+ for this feature to be enabled.
+  ENABLED: true
+  TEXT: '&aKOTH Percentage Capped'
+
+TITLES:
+  KOTH_START:
+    ENABLED: false
+    TITLE: '&aThe koth %koth% has just started!'
+    SUBTITLE: '&7To participate in this event, type /warp koth.'
+  KOTH_END:
+    ENABLED: false
+    TITLE: '&cThe koth %koth% has just ended!'
+    SUBTITLE: '&7This was ended manually and there was no winner.'
+  KOTH_CAPTURE:
+    ENABLED: false 
+    TITLE: '&e%player% has just captured the KOTH %koth%!'
+    SUBTITLE: '&7%team% have received commands and rewards.'
+    
 KEEP_INVENTORY_WHILE_ACTIVE:
   ENABLED: false # Set this to true for all players to keep inventory on death while KOTH is active
   DISABLE_IN_WORLD: # List of worlds this will be enabled in
@@ -121,69 +170,70 @@ KEEP_INVENTORY_WHILE_ACTIVE:
    REGIONS:
    - example
   
+############################################################
+#                                                          #
+#                     Advanced Section                     #
+#                                                          #
+#    Only change this section if you have a good reason    #
+#                                                          #
+############################################################  
+  
 # Set this to true if you want to make the capper time and lose capture to be a priority and not be affected by TPS
 # Be warned if you set this to true it could cause more lag on your server
 
-RUN_CAPPER_SYNC: false
+RUN_CAPPER_SYNC: false  
   
-RESET_MAXRUNTIME_ON_CAPTURE: false # Set this to true to reset the maxruntime every time a player starts capturing
+PERMISSION_FOR_CAPTURE: false # Enable this to have players require this permission to capture koth
 
-CUSTOM_HELP_PAGE:
-  ENABLED: true
-  TITLE: '&aPirateCraft KOTH Help Menu'
-  PAGES:
-    1: # List the page number here
-    - '&l&6Welcome to the King of the Hull at PirateCraft!'
-    - ' '
-    - '&aKOTHs are scheduled throughout the day. Use the commands'
-    - '&abelow to learn more.'
-    - '&a/koth times &b- View the scheduled KOTHs.'
-    - '&a/koth top &b- View current top KOTH crews.'
-    
-MINIMUM_PLAYERS_FOR_SCHEDULE_START: -1 # Set to -1 for this to be disabled
- 
-HOLOGRAM_EVENTS: # Use this feature to reload holograms to update with new cappers etc
-  NEW_CAPPER: false
+BROADCAST_PERMISSION: # Enable this to have players require this permission to see messages
+  ENABLED: false # Permission is KOTH.MESSAGES
   
-BOSS_BAR:
-  ENABLED: true
-  TEXT: '&aKOTH Percentage Capped'
+DISABLE_BROADCASTS_IN_WORLDS: # Disable any KOTH related broadcasts in these worlds
+- example  
 
-TITLES:
-  KOTH_START:
-    ENABLED: false
-    TITLE: '&aThe koth %koth% has just started!'
-    SUBTITLE: '&7To participate in this event, make your way to that koth using /travel.'
-  KOTH_END:
-    ENABLED: false
-    TITLE: '&cThe koth %koth% has just ended!'
-    SUBTITLE: '&7This was ended manually and there was no winner.'
-  KOTH_CAPTURE:
-    ENABLED: false
-    TITLE: '&e%player% has just captured the KOTH %koth%!'
-    SUBTITLE: '&7%team% have received rewards.'
+DEFAULT_CAPTURE:
+  TIMER: 1 # Amount of seconds added per second
+  POINTS: 1 # Amount of points added per second
+  
+  # If this is set to true you can give players permissions such as KOTH.CAPTURESPEED.5
+  # You can use permissions KOTH.CAPTURESPEED.1 - KOTH.CAPTURESPEED.10
+  
+  PERMISSION_BASED: false 
   
 # This feature allows you to set a maximum amount of time allowed off the capture zone before losing control
 # Set to -1 to disable this feature, by default it's off so you instantly lose control  
   
 DELAYED_PLAYER_LOSE_CAPTURE: -1
-
-# Use this feature to use a point system instead of a timer
-
-KOTH_POINTS_SYSTEM:
-  ENABLED: false
-  STORED_TYPE: 'PLAYER' # Put either 'PLAYER' or 'TEAM' here
-  MAX_POINTS: false # Set this to true to specify max points instead of max run time
   
+ALLOW_NO_TEAM_CAPTURE: true # Set this to false to disable players without a team to capture
 
-#################################################################
-#                                                               #
-#                   Forced Team Hook Section                    #
-#                                                               #
-#  Only use this section if you have multiple team plugins on   #
-#                   the supported plugin list                   #
-#                                                               #
-#################################################################    
+ALLOW_FULL_TEAM_CAPTURE: false # Set this to true to allow a whole team to capture rather than a player
+
+PAUSE_OTHER_TEAMS: false # Pause capture if another team is stood on the zone  
+  
+############################################################
+#                                                          #
+#                    Custom GUI Section                    #
+#                                                          #
+############################################################
+
+KOTH_ADMIN_GUI:
+  NAME: '&aKOTH START GUI'
+  SIZE: 27
+
+KOTH_PLAYER_GUI:
+  NAME: '&aKOTH PLAYER GUI'
+  SIZE: 27
+
+############################################################
+#                                                          #
+#                 Forced Team Hook Section                 #
+#                                                          #
+#       ONLY use this if you have multiple team plugins    #
+#                on the supported plugin list              #
+#                                                          #
+#                                                          #
+############################################################      
 
 TOWNY_USE_NATIONS: false # Set this to true to enable nations instead of towns
 MCMMO_USE_PARTIES: false # Set this to true to enable McMMO parties
