--- a/config.yml
+++ b/config.yml
@@ -113,11 +113,17 @@ KOTH_STARTER_ITEM:
 VIEW_COMMAND_PER_PERMISSION: false
 
 CUSTOM_HELP_PAGE:
-  ENABLED: false
-  TITLE: '&aCustom KOTH Help Menu'
+  ENABLED: true
+  TITLE: '&aPirateCraft KOTH Help Menu'
   PAGES:
     1: # List the page number here
+    - '&l&6Welcome to the King of the Hull at PirateCraft!'
+    - ' '
+    - '&aKOTHs are scheduled throughout the day. Use the commands'
+    - '&abelow to learn more.'
     - '&a/koth times &b- View the scheduled KOTHs.'
+    - '&a/koth next &b- See info of upcoming KOTH.'
+    - '&a/koth top &b- View current top KOTH crews.'
   
 ############################################################
 #                                                          #
